# delibot

./: .gitignore  LICENSE  LICENSE.md  README.md  conftest.py  pyproject.toml  pyptoject.toml  requirements.txt
app/: main.py
app/bot/: bot_main.py
app/bot/commands/: basic_commands.py
app/utils/: logger.py  path.py
test/: test_bot_main.py  test_logger.py  test_path.py
