[project]
name = "delibot"
version = "0.1.0"
description = "Discord bot"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [
  { name = "Pedro 'Dopeldev' Gonzales" },
  { email = "dopel@dopeldev.com" },
]
dependencies = [
  "discord.py>=2.4",
  "python-dotenv>=1.0",
]

[project.scripts]
# Ejecuta con: delibot
delibot = "app.main:main"

# pyproject.toml
[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
